# assistant

./: .gitignore  README.md  pyproject.toml
data/: available_models.json  models.json  models_con.json  system.json
llmassist/: main.py  utils.py
llmassist/templates/: goodbye.html  index.html  tune.html
models/: adapters.py  decorators.py  filer.py  logger.py  mapper.py
results/: answ_ft.txt  answ_ft_gr.txt  answ_ft_zi.txt  answer1.txt  answer2.txt  answer3.txt  answer4.txt  answer5.txt  answer_ft.txt  current_chat copy.json
